adding config-server and dto for other operations
